--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
     <div class="u-cf"></div> <!-- clear floats -->
 
     <!-- BUTTONS -->
+    <button>Default Button</button>
+    <input type="submit" value="Input Submit">
+    <input type="button" value="Input Button">
+    <a href="" class="button">Link Button</a>
+
+    <br/>
+
+    <!-- PRIMARY BUTTONS -->
+    <button class="button-primary">Primary Button</button>
+    <input class="button-primary" type="submit" value="Primary Input Submit">
+    <input class="button-primary" type="button" value="Primary Input Button">
+    <a href="" class="button button-primary">Primary Link Button</a>
     
 </body>
 </html>
