full width, lists, and code blocks

--- a/index.html
+++ b/index.html
@@ -37,6 +37,37 @@
     <input class="button-primary" type="submit" value="Primary Input Submit">
     <input class="button-primary" type="button" value="Primary Input Button">
     <a href="" class="button button-primary">Primary Link Button</a>
-    
+
+    <br/>
+
+    <!-- FULL WIDTH (not just for buttons) -->
+    <button class="u-full-width">Full Width Button</button>
+    <button class="button-primary u-full-width">Full Width Priamry Button</button>
+
+    <!-- LISTS -->
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Services</li>
+            <ul>
+                <li>Web Design</li>
+                <li>Software Development</li>
+            </ul>
+        <li>Contact</li>
+    </ul>
+
+    <!-- CODE BLOCK -->
+    <pre>
+        <code>
+            <p>this a block of CSS code</p>
+            body{
+                color:#fff;
+                background:#000;
+            }
+        </code>
+    </pre>
+
+    <!-- TABLES -->
+
 </body>
 </html>
