table + full-width table

--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
     </pre>
 
     <!-- TABLES -->
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>City</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John Doe</td>
+                <td>jdoe@gmail.com</td>
+                <td>New York</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <table class="u-full-width">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>City</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John Doe</td>
+                <td>jdoe@gmail.com</td>
+                <td>New York</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
