extra special grid

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus natus qui, sapiente voluptate expedita doloribus nulla non dicta ad excepturi nobis unde dolorem repudiandae tempora nesciunt accusamus cumque aspernatur sequi! Eveniet fugit dolores harum animi possimus eius velit dolorem.
         </div>
     </div>
+
+    <br>
+
     <div class="row">
         <div class="six columns">
             <h4>six Columns</h4>
@@ -155,6 +158,29 @@
         <div class="six columns">
             <h4>six Columns</h4>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus natus qui, sapiente voluptate expedita doloribus nulla non dicta ad excepturi nobis unde dolorem repudiandae tempora nesciunt accusamus cumque aspernatur sequi! Eveniet fugit dolores harum animi possimus eius velit dolorem.
+        </div>
+    </div>
+
+    <br/>
+
+    <!-- Setting up by using a single column for a page and splitting into thirds -->
+    <div class="row">
+        <div class="one-third column">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, rerum.
+        </div>
+        <div class="two-thirds column">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, rerum.
+        </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="one-half column">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, rerum.
+        </div>
+        <div class="one-half column">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, rerum.
         </div>
     </div>
 
